--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ actix-cors = "0.6"
 actix-governor = "0.6"
 chrono = {version = "0.4", features = ["serde"]}
 validator = {version = "0.19.0", features = ["derive"]}
+diesel_logger = "0.4"
 
 
 [dependencies.actix-session]
