--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ actix-governor = "0.6"
 chrono = {version = "0.4", features = ["serde"]}
 validator = {version = "0.19.0", features = ["derive"]}
 diesel_logger = "0.4"
+futures = "0.3"
+actix-service = "2.0.2"
+futures-util = "0.3.31"
 
 
 [dependencies.actix-session]
